--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final Weather App</title>
+    <link ref="stylesheet" href="style.css" />
+    <title>Vanilla Weather App</title>
   </head>
   <body></body>
+  <script src="app.js"></script>
 </html>
