--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     />
     <title>Vanilla Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
   <script src="app.js"></script>
 </html>
