--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
     <title>Vanilla Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="weather-app">
+      <h1>Cape Town, South Africa</h1>
+      <ul>
+        <li>Friday 18:45</li>
+        <li>Clear</li>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+              alt="clear"
+            />
+            14 &#8451; | &#8457;
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 2%</li>
+              <li>Humidity: 67%</li>
+              <li>Wind: 11 km/h</li>
+            </ul>
+          </div>
+          </div>
+        <small>
+            <a href="https://github.com/lindokuhlenyoka/my-updated-weather-app" target="_blank" rel="noreferrer" >Open-source code</a> <em>by Lindokuhle Nyoka</em>
+        </small>
+    </div>
+      <script src="app.js"></script>
   </body>
-  <script src="app.js"></script>
 </html>
