--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link ref="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,11 +15,12 @@
   </head>
   <body>
     <div class="container">
-        <div class="weather-app">
-      <h1>Cape Town, South Africa</h1>
-      <ul>
-        <li>Friday 18:45</li>
-        <li>Clear</li>
+      <div class="weather">
+        <h1 class="heading">Cape Town, South Africa</h1>
+        <ul class="spacing">
+          <li>Friday 18:45</li>
+          <li>Clear</li>
+        </ul>
         <div class="row">
           <div class="col-6">
             <img
@@ -35,11 +36,18 @@
               <li>Wind: 11 km/h</li>
             </ul>
           </div>
-          </div>
+        </div>
         <small>
-            <a href="https://github.com/lindokuhlenyoka/my-updated-weather-app" target="_blank" rel="noreferrer" >Open-source code</a> <em>by Lindokuhle Nyoka</em>
+          <a
+            href="https://github.com/lindokuhlenyoka/my-updated-weather-app"
+            target="_blank"
+            rel="noreferrer"
+            >Open-source code</a
+          >
+          <em>by Lindokuhle Nyoka</em>
         </small>
+        <script src="app.js"></script>
+      </div>
     </div>
-      <script src="app.js"></script>
   </body>
 </html>
