--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,39 +15,45 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather">
-        <h1 class="heading">Cape Town, South Africa</h1>
-        <ul class="spacing">
-          <li>Friday 18:45</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-              alt="clear"
-            />
-            14 &#8451; | &#8457;
+      <div class="weather-wrapper">
+        <div class="weather">
+          <h1 class="heading">Cape Town, South Africa</h1>
+          <ul class="heading">
+            <li>Friday 18:45</li>
+            <li>Clear</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+                  alt="clear"
+                  class="float-left"
+                />
+                <div class="float-left">14&#8451; | &#8457;</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 2%</li>
+                <li>Humidity: 67%</li>
+                <li>Wind: 11 km/h</li>
+              </ul>
+            </div>
           </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitation: 2%</li>
-              <li>Humidity: 67%</li>
-              <li>Wind: 11 km/h</li>
-            </ul>
-          </div>
+
+          <script src="app.js"></script>
         </div>
-        <small>
-          <a
-            href="https://github.com/lindokuhlenyoka/my-updated-weather-app"
-            target="_blank"
-            rel="noreferrer"
-            >Open-source code</a
-          >
-          <em>by Lindokuhle Nyoka</em>
-        </small>
-        <script src="app.js"></script>
       </div>
+      <small>
+        <a
+          href="https://github.com/lindokuhlenyoka/my-updated-weather-app"
+          target="_blank"
+          rel="noreferrer"
+          >Open-source code</a
+        >
+        <em>by Lindokuhle Nyoka</em>
+      </small>
     </div>
   </body>
 </html>
