--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <div class="container">
       <div class="weather-wrapper">
         <div class="weather">
-          <h1 class="heading">Cape Town, South Africa</h1>
-          <ul class="heading">
-            <li>Friday 18:45</li>
-            <li>Clear</li>
-          </ul>
+          <form id="search-form" classs+="mb-3"
+          
+          
           <div class="row">
             <div class="col-6">
               <div class="clearfix">
@@ -30,7 +28,7 @@
                   alt="clear"
                   class="float-left"
                 />
-                <div class="float-left">14&#8451; | &#8457;</div>
+                <div class="float-left">19°C | °F</div>
               </div>
             </div>
             <div class="col-6">
