--- a/index.html
+++ b/index.html
@@ -64,7 +64,24 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                  Tues
+                  <img
+                    src="http://openweathermap.org/img/wn/02d@2x.png"
+                    alt=""
+                    width="36"
+                  />
+                  <div class="weather-forecast-temperatures">
+                    <span class="weather-forcast-temperature-max">18°</span>
+                    <span class="weaather-forecast-temperature-min">12°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
