--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
+          <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">
@@ -72,7 +72,7 @@
                   <img
                     src="http://openweathermap.org/img/wn/02d@2x.png"
                     alt=""
-                    width="36"
+                    width="42"
                   />
                   <div class="weather-forecast-temperatures">
                     <span class="weather-forcast-temperature-max">18°</span>
