Checked for any errors since app was not responding.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                   <img
                     src="http://openweathermap.org/img/wn/02d@2x.png"
                     alt=""
-                    width="42"
+                    width="50"
                   />
                   <div class="weather-forecast-temperatures">
-                    <span class="weather-forcast-temperature-max">18°</span>
-                    <span class="weaather-forecast-temperature-min">12°</span>
+                    <span class="weather-forcast-temperature-max">°</span>
+                    <span class="weaather-forecast-temperature-min">°</span>
                   </div>
                 </div>
               </div>
